--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <span>LinkedIn</span></a>
         </li>
       </ul>
-      <button type="button" class="btn btn--primary">
-        <span>ver projetos</span>
+      <button type="button" class="btn btn--primary" onclick="abrir">
+        <span><a href="https://github.com/matheusmoreirapilker">ver projetos</a></span>
         <i class="bi bi-arrow-down-right"></i>
       </button>
     </div>
@@ -115,27 +115,7 @@
       </li>
     </ul>
   </section>
-  <section id="projetos">
-    <h2>Projetos</h2>
-    <div class="projetos-container">
-      <div class="card-1">
-        <img src="images/projeto-homero-imagem.png" alt="Site Cietcab" width="600px">
-        <h3 class="card__title">Site Cietcab</h3>
-        <p class="card__description">Site informativo para turismo e intercâmbios.</p>
-        <ul class="card__list">
-          <li>Múltiplas Páginas;</li>
-          <li>Design Responsivo</li>
-          <li>Interface para Email.</li>
-        </ul>
-            <ul class="skills__list">
-      <li class="skills__item">
-      <li class="skills__item">
-        <img class="skills__logo" src="technologies/HTML.svg" alt="Logo Bootstrap" height="50px">
-      </li>
-      <li class="skills__item">
-        <img class="skills__logo" src="technologies/CSS.svg" alt="Logo Bootstrap" height="50px">
-      </li>
-    </ul>
+  
       </div>
 
     </div>
